--- a/config/train/config_exp0.yaml
+++ b/config/train/config_exp0.yaml
@@ -1,6 +1,6 @@
 model_path: models.exp0
 train:
-  rundir_name: 'train_-1'
+  rundir_name: 'train_<autoindex>'
   device: '0,1,2'
   batch_size: 24
   epochs: 200
