--- a/config/train/config_exp5.yaml
+++ b/config/train/config_exp5.yaml
@@ -1,16 +1,16 @@
-model_path: models.baseline
+model_path: models.exp5
 train:
   rundir_name: 'train_<autoindex>'
-  device: '0,1'
-  batch_size: 64
-  epochs: 200
+  device: '2,3'
+  batch_size: 16
+  epochs: 100
   ckpt_frequency: 10
-  lr_step_size: 20
+  lr_step_size: 10
   lr_step_gamma: 0.3
   resume_from_ckpt: ''
   resume_items: ['state_dict']
   learning_rate: 0.005
 model:
-  input_points_num: 2048
+  input_points_num: 8192
 dataset:
-  input_points_num: 2048
+  input_points_num: 8192
