--- a/config/train/config_classification_baseline.yaml
+++ b/config/train/config_classification_baseline.yaml
@@ -1,20 +1,19 @@
 model_path: models.classification.baseline
 train:
   rundir_name: 'train_classification_<autoindex>'
-  device: '0,1,2,3'
-  batch_size: 64
-  num_workers: 16
-  epochs: 100
+  device: '2,3'
+  batch_size: 16
+  optimizer: 'adam'
+  epochs: 200
   ckpt_frequency: 5
-  lr_step_size: 25
-  lr_step_gamma: 0.3
+  lr_step_size: 40
+  lr_step_gamma: 0.1
   resume_from_ckpt: ''
   resume_items: ['state_dict']
-  learning_rate: 0.05
+  learning_rate: 0.005
   test_frequency: 5
 test:
   batch_size: 8
-  num_workers: 8
 model:
   input_points_num: 1024
 dataset:
