--- a/config/train/config_classification_baseline.yaml
+++ b/config/train/config_classification_baseline.yaml
@@ -2,20 +2,22 @@ model_path: models.classification.baseline
 train:
   rundir_name: 'train_classification_<autoindex>'
   device: '2,3'
-  batch_size: 16
-  optimizer: 'adam'
-  epochs: 200
+  batch_size: 8
+  num_workers: 4
+  optimizer: 'sgd'
+  momentum: 0.9
+  epochs: 100
   ckpt_frequency: 5
-  lr_step_size: 40
+  lr_step_size: 25
   lr_step_gamma: 0.1
   resume_from_ckpt: ''
   resume_items: ['state_dict']
-  learning_rate: 0.005
+  learning_rate: 0.05
   test_frequency: 5
 test:
-  batch_size: 8
+  batch_size: 4
 model:
-  input_points_num: 1024
+  input_points_num: 4096
 dataset:
-  input_points_num: 1024
+  input_points_num: 4096
   with_classes: True
