--- a/config/train/config_exp4.yaml
+++ b/config/train/config_exp4.yaml
@@ -2,15 +2,21 @@ model_path: models.exp4
 train:
   rundir_name: 'train_<autoindex>'
   device: '2,3'
-  batch_size: 32
-  epochs: 200
-  ckpt_frequency: 10
-  lr_step_size: 10
-  lr_step_gamma: 0.3
+  batch_size: 128
+  num_workers: 4
+  optimizer: 'sgd'
+  epochs: 100
+  momentum: 0.9
+  ckpt_frequency: 20
+  lr_step_size: 25
+  lr_step_gamma: 0.1
   resume_from_ckpt: ''
   resume_items: ['state_dict']
-  learning_rate: 0.005
+  learning_rate: 0.05
+  test_frequency: 5
+test:
+  batch_size: 4
 model:
-  input_points_num: 8192
+  input_points_num: 4096
 dataset:
-  input_points_num: 8192
+  input_points_num: 4096
