--- a/config/train/config_exp4.yaml
+++ b/config/train/config_exp4.yaml
@@ -2,11 +2,9 @@ model_path: models.exp4
 train:
   rundir_name: 'train_<autoindex>'
   device: '3'
-  batch_size: 64
-  num_workers: 4
-  optimizer: 'sgd'
+  batch_size: 8
+  weight_decay: 0.0001
   epochs: 100
-  momentum: 0.9
   ckpt_frequency: 5
   lr_step_size: 20
   lr_step_gamma: 0.1
@@ -15,8 +13,9 @@ train:
   learning_rate: 0.001
   test_frequency: 0
 test:
-  batch_size: 64
+  batch_size: 8
 model:
-  input_points_num: 4096
+  input_points_num: 32768
 dataset:
-  input_points_num: 4096
+  root: 'datasets/modelnet40_manually_aligned'
+  input_points_num: 32768
