--- a/config/train/config_convolutional_PCGCv2.yaml
+++ b/config/train/config_convolutional_PCGCv2.yaml
@@ -3,18 +3,19 @@ train:
   rundir_name: 'train_convolutional_<autoindex>'
   device: '3'
   amp: False
-  batch_size: 4
+  batch_size: 16
   weight_decay: 0.0001
-  epochs: 100
+  epochs: 40
   ckpt_frequency: 5
-  lr_step_size: 20
+  lr_step_size: 10
   lr_step_gamma: 0.1
   resume_from_ckpt: ''
   resume_items: ['state_dict']
   learning_rate: 0.01
 test:
-  batch_size: 4
+  batch_size: 16
 dataset:
   root: 'datasets/modelnet40_manually_aligned'
+  input_points_num: 200000
   resolution: 128
 
