--- a/config/datasets/8iVFB.yaml
+++ b/config/datasets/8iVFB.yaml
@@ -1,13 +1,14 @@
-dataset_path:
-  'lib.datasets.PlyVoxel'
-dataset:
-  root: 'datasets/8iVFBv2'
-  filelist_path: 'list.txt'
-  file_path_pattern: '*/Ply/*.ply'
+train:
+  dataset_path:
+    'lib.datasets.PlyVoxel'
+  dataset:
+    root: 'datasets/8iVFBv2'
+    filelist_path: 'list.txt'
+    file_path_pattern: '*/Ply/*.ply'
 
-  with_color: False
-  with_normal: False
-  with_file_path: True
+    with_color: False
+    with_normal: False
+    with_file_path: True
 
-  ori_resolution: 1024
-  resolution: 1024
+    ori_resolution: 1024
+    resolution: 1024
