--- a/config/datasets/voxel_concat.yaml
+++ b/config/datasets/voxel_concat.yaml
@@ -1,13 +1,14 @@
-dataset_path:
-  'lib.datasets.PlyVoxel'
-dataset:
-  root: ['datasets/MVUB', 'datasets/8iVFBv2', 'datasets/Owlii']
-  filelist_path: 'list.txt'
-  file_path_pattern: '**/*.ply'
+train:
+  dataset_path:
+    'lib.datasets.PlyVoxel'
+  dataset:
+    root: ['datasets/MVUB', 'datasets/8iVFBv2', 'datasets/Owlii']
+    filelist_path: 'list.txt'
+    file_path_pattern: '**/*.ply'
 
-  with_color: False
-  with_normal: False
-  with_file_path: True
+    with_color: False
+    with_normal: False
+    with_file_path: True
 
-  ori_resolution: [512, 1024, 2048]
-  resolution: [512, 1024, 2048]
+    ori_resolution: [512, 1024, 2048]
+    resolution: [512, 1024, 2048]
