--- a/config/train/config_convolutional_PCGCv2.yaml
+++ b/config/train/config_convolutional_PCGCv2.yaml
@@ -4,20 +4,34 @@ train:
   device: '3'
   amp: False
   batch_size: 8
+  optimizer: adam
+  momentum: 0.9
   weight_decay: 0.0001
-  epochs: 40
-  ckpt_frequency: 5
-  lr_step_size: 20
-  lr_step_gamma: 0.1
-  resume_from_ckpt: 'runs/train_convolutional_4/ckpts/epoch_<maxindex>.pt'
+  epochs: 20
+  ckpt_frequency: 2
+  lr_step_size: 4
+  lr_step_gamma: 0.5
+  resume_from_ckpt: ''
   resume_items: ['state_dict']
-  learning_rate: 0.005
+  learning_rate: 0.0005
+  test_frequency: 2
   dataset_path: 'lib.datasets.ShapeNetCorev2'
 test:
-  batch_size: 8
-#dataset_path: 'lib.datasets.pcgcv2_data'
-#dataset:
-#  root: 'datasets/modelnet40_manually_aligned'
-#  input_points_num: 200000
-#  resolution: 128
+  batch_size: 1
+  save_results: True
+  dataset_path:
+    'lib.datasets.PlyVoxel'
+  log_frequency: 1
+  dataset:
+    root: ['datasets/MVUB', 'datasets/8iVFBv2', 'datasets/Owlii']
+    filelist_path: 'list.txt'
+    file_path_pattern: '**/*.ply'
+
+    with_color: False
+    with_normal: False
+    with_file_path: True
+
+    ori_resolution: [512, 1024, 2048]
+    resolution: [512, 1024, 2048]
+
 
