--- a/config/train/config_convolutional_PCGCv2.yaml
+++ b/config/train/config_convolutional_PCGCv2.yaml
@@ -1,23 +1,44 @@
 model_path: models.convolutional.PCGCv2
+
+
 train:
   rundir_name: 'train_convolutional_<autoindex>'
   device: '3'
   amp: False
-  batch_size: 8
+  batch_size: 2  # 16
+  num_workers: 4
   optimizer: adam
   momentum: 0.9
   weight_decay: 0.0001
-  epochs: 20
+  max_grad_norm: 1.0
+
+# train from random
+#  learning_rate: 0.0005
+#  epochs: 20
+  learning_rate: 0.0001
+  epochs: 10
+
   ckpt_frequency: 2
-  lr_step_size: 4
+  lr_step_size: 2  # 4
   lr_step_gamma: 0.5
-  resume_from_ckpt: ''
+  resume_from_ckpt: ''  # 'runs/train_convolutional_8/ckpts/epoch_<maxindex>.pt'
   resume_items: ['state_dict']
-  learning_rate: 0.0005
   test_frequency: 2
+
+#  dataset_path: 'lib.datasets.PCGCv2Data'
+#  dataset_path: 'lib.datasets.ShapeNetCorev2'
+
+# use mesh objects to generate voxelized points with high resolution
   dataset_path: 'lib.datasets.ShapeNetCorev2'
+  dataset:
+    data_format: '.obj'
+    points_num: 5000000
+    resolution: 256
+
+
 test:
   batch_size: 1
+  num_workers: 2
   save_results: True
   dataset_path:
     'lib.datasets.PlyVoxel'
