--- a/config/train/config_convolutional_PCGCv2.yaml
+++ b/config/train/config_convolutional_PCGCv2.yaml
@@ -1,11 +1,14 @@
 model_path: models.convolutional.PCGCv2
-
+# test custom bottleneck
+#model:
+#  bottleneck: 'BinaryClassification'
+#  compressed_channels: 32
 
 train:
   rundir_name: 'train_convolutional_<autoindex>'
   device: '3'
   amp: False
-  batch_size: 2  # 16
+  batch_size: 16  # 4
   num_workers: 4
   optimizer: adam
   momentum: 0.9
@@ -13,27 +16,27 @@ train:
   max_grad_norm: 1.0
 
 # train from random
-#  learning_rate: 0.0005
-#  epochs: 20
-  learning_rate: 0.0001
-  epochs: 10
+  learning_rate: 0.0005
+  epochs: 20
+#  learning_rate: 0.0001
+#  epochs: 10
 
-  ckpt_frequency: 2
-  lr_step_size: 2  # 4
+  ckpt_frequency: 1
+  lr_step_size: 4  # 2
   lr_step_gamma: 0.5
   resume_from_ckpt: ''  # 'runs/train_convolutional_8/ckpts/epoch_<maxindex>.pt'
   resume_items: ['state_dict']
   test_frequency: 2
 
 #  dataset_path: 'lib.datasets.PCGCv2Data'
-#  dataset_path: 'lib.datasets.ShapeNetCorev2'
+  dataset_path: 'lib.datasets.ShapeNetCorev2'
 
 # use mesh objects to generate voxelized points with high resolution
-  dataset_path: 'lib.datasets.ShapeNetCorev2'
-  dataset:
-    data_format: '.obj'
-    points_num: 5000000
-    resolution: 256
+#  dataset_path: 'lib.datasets.ShapeNetCorev2'
+#  dataset:
+#    data_format: '.obj'
+#    points_num: 5000000
+#    resolution: 256
 
 
 test:
@@ -51,6 +54,8 @@ test:
     with_color: False
     with_normal: False
     with_file_path: True
+    with_resolution: True
+    with_ori_resolution: True
 
     ori_resolution: [512, 1024, 2048]
     resolution: [512, 1024, 2048]
