--- a/config/train/config_convolutional_baseline.yaml
+++ b/config/train/config_convolutional_baseline.yaml
@@ -1,4 +1,8 @@
 model_path: models.convolutional.baseline
+model:
+  use_batch_norm: True
+  use_skip_connection: True
+
 
 train:
   rundir_name: 'train_convolutional_<autoindex>'
@@ -13,24 +17,34 @@ train:
   weight_decay: 0.0001
   max_grad_norm: 1.0
 
-  learning_rate: 0.0001
-  epochs: 10
+  learning_rate: 0.0005
+  epochs: 30
+
+#  learning_rate: 0.0005
+#  epochs: 20
 
   more_reproducible: True
 
   ckpt_frequency: 1
-  lr_step_size: 2
+  lr_step_size: 6  # 4
   lr_step_gamma: 0.5
-  resume_from_ckpt: ''
+  resume_from_ckpt: ''  # 'runs/train_convolutional_16/ckpts/epoch_<maxindex>.pt'
   resume_items: ['state_dict']
-  test_frequency: 4
+  test_frequency: 5
 
-  dataset_path: 'lib.datasets.PCGCv2Data'
-#  dataset_path: 'lib.datasets.ShapeNetCorev2'
+  dataset_path: 'lib.datasets.ShapeNetCorev2'
 
   dataset:
     random_rotation: True
+    # for predicting feature points coordinates or using coordinates as input feature
     with_resolution: True
+
+# use mesh objects to generate voxelized points with high resolution
+#  dataset_path: 'lib.datasets.ShapeNetCorev2'
+#  dataset:
+#    data_format: '.obj'
+#    points_num: 5000000
+#    resolution: 256
 
 
 test:
