--- a/config/train/convolutional_baseline.yaml
+++ b/config/train/convolutional_baseline.yaml
@@ -1,13 +1,18 @@
 model_path: models.convolutional.baseline
 model:
   use_batch_norm: True
-  use_skip_connection: True
+  use_skip_connection: False
+  encoder_channels: [16, 32, 32, 16]
+  compressed_channels: 8
+  decoder_channels: [32, 32, 16]
+  skip_connection_channels: [32, 32]
 
 
 train:
   rundir_name: 'train_convolutional_<autoindex>'
   device: '2,3'
   amp: False
+  more_reproducible: True
   batch_size: 24
   num_workers: 4
   optimizer: adam
@@ -18,19 +23,14 @@ train:
   max_grad_norm: 1.0
 
   learning_rate: 0.0005
-  epochs: 30
-
-#  learning_rate: 0.0005
-#  epochs: 20
-
-  more_reproducible: True
+  epochs: 20
 
   ckpt_frequency: 1
-  lr_step_size: 6  # 4
+  lr_step_size: 4
   lr_step_gamma: 0.5
   resume_from_ckpt: ''  # 'runs/train_convolutional_16/ckpts/epoch_<maxindex>.pt'
   resume_items: ['state_dict']
-  test_frequency: 5
+  test_frequency: 4
 
   dataset_path: 'lib.datasets.ShapeNetCorev2'
 
