--- a/config/datasets/MVUB.yaml
+++ b/config/datasets/MVUB.yaml
@@ -1,4 +1,4 @@
-train:
+test:
   dataset_path:
     'lib.datasets.PlyVoxel'
   dataset:
@@ -9,6 +9,8 @@ train:
     with_color: False
     with_normal: False
     with_file_path: True
+    with_resolution: True
+    with_ori_resolution: True
 
     ori_resolution: 512
     resolution: 512
