Update metrics and evaluators. Rename modules. Fix bugs of SimpleConfig.

--- a/config/train/image_compression_baseline.yaml
+++ b/config/train/image_compression_baseline.yaml
@@ -30,7 +30,7 @@ train:
 
     normalization_scaler: 255
     channels_order: 'BGR'
-    target_shapes: [640, 640, 1024, 1024, 1280, 1280]
+    target_shapes: [1024, 1024, 1280, 1280]
     resize_strategy: 'Expand'
 
 
