--- a/config/train/convolutional_baseline.yaml
+++ b/config/train/convolutional_baseline.yaml
@@ -4,18 +4,16 @@ model:
   basic_block_num: 3
   use_batch_norm: False
   activation: 'leaky_relu(0.2)'
-  encoder_channels: [8, 16, 64, 32]
+  encoder_channels: [4, 16, 64, 64]
   compressed_channels: 8
-  decoder_channels: [64, 32, 16]
-  use_skip_connection: False
-  skip_connection_channels: [4, 8, 32]
+  decoder_channels: [64, 16, 4]
   bpp_loss_factor: 0.2
   hyperprior: NoisyDeepFactorized
   hyper_bpp_loss_factor: 0.2
-  hyper_encoder_channels: [16, 16, 16, 16]
-  hyper_decoder_channels: [16, 16, 16, 16]
-  hyper_compressed_channels: 16
-  prior_indexes_range: [16, 16]
+  hyper_encoder_channels: [32]
+  hyper_compressed_channels: 8
+  hyper_decoder_channels: [32, 32]
+  prior_indexes_range: [4, 4, 4, 4]
 
 
 train:
@@ -23,25 +21,19 @@ train:
   device: '2,3'
   amp: False
   more_reproducible: False
-  batch_size: 32
+  batch_size: 8
   num_workers: 2
-  optimizer: Adam
-  aux_optimizer: SGD
+  optimizer: [Adam, Adam, SGD]
   momentum: 0.9
-  aux_momentum: 0.9
   weight_decay: 0.0001
-  max_grad_norm: 1.0
+  max_grad_norm: [1.0, 1.0, 0.0]
 
-  learning_rate: 0.0005
-  aux_learning_rate: 0.005
+  learning_rate: [0.0005, 0.0001, 0.005]
   epochs: 20
 
   scheduler: Step
   lr_step_size: 4
   lr_step_gamma: 0.3
-#  lr_init_div_factor: 10.0
-#  lr_final_div_factor: 1000.0
-#  lr_pct_start: 0.05
 
   ckpt_frequency: 1
   resume_from_ckpt: ''  # 'runs/train_convolutional_23/ckpts/epoch_<maxindex>.pt'
@@ -63,6 +55,7 @@ train:
 #    resolution: 256
 #    random_rotation: True
 #    with_resolution: True
+#    train_filelist_path: 'train_list_obj.txt'
 
 
 test:
@@ -74,7 +67,7 @@ test:
     'lib.datasets.PlyVoxel'
   log_frequency: 1
   dataset:
-    root: ['datasets/MVUB', 'datasets/8iVFBv2', 'datasets/Owlii']
+    root: ['datasets/Owlii', 'datasets/8iVFBv2']
     filelist_path: 'list.txt'
     file_path_pattern: '**/*.ply'
 
@@ -84,5 +77,5 @@ test:
     with_resolution: True
     with_ori_resolution: True
 
-    ori_resolution: [512, 1024, 2048]
-    resolution: [512, 1024, 2048]
+    ori_resolution: [2048, 1024]
+    resolution: [2048, 1024]
