--- a/config/train/convolutional_PCGCv2.yaml
+++ b/config/train/convolutional_PCGCv2.yaml
@@ -5,7 +5,6 @@ model:
   basic_block_num: 3
   use_batch_norm: False
   activation: 'relu'
-  use_skip_connection: False
   encoder_channels: [16, 32, 64, 32]
   compressed_channels: 8
   decoder_channels: [64, 32, 16]
@@ -24,7 +23,7 @@ train:
   optimizer: [Adam, Adam, SGD]
   momentum: 0.9
   weight_decay: 0.0001
-  max_grad_norm: 1.0
+  max_grad_norm: [1.0, 0.0]
 
   learning_rate: [0.0001, 0.0001, 0.0001]
   epochs: 10
