--- a/config/train/convolutional_PCGCv2.yaml
+++ b/config/train/convolutional_PCGCv2.yaml
@@ -23,7 +23,7 @@ train:
   optimizer: [Adam, Adam, SGD]
   momentum: 0.9
   weight_decay: 0.0001
-  max_grad_norm: [1.0, 0.0]
+  max_grad_norm: [1.0, 1.0, 0.0]
 
   learning_rate: [0.0001, 0.0001, 0.0001]
   epochs: 10
