--- a/configs/train/convolutional/lossless_based.yaml
+++ b/configs/train/convolutional/lossless_based.yaml
@@ -6,8 +6,7 @@ model:
   prior_indexes_range: [16, 16, 16, 16]
   hyper_encoder_scaler: 1.0
   prior_indexes_scaler: 10.0
-  lossless_compression_based: True
+  lossless_based: True
   lossless_coder_channels: 64
   lossless_coord_indexes_range: [8, 8, 8, 8]
-  lossless_detach_higher_fea: False
   lossless_hybrid_hyper_decoder_fea: True
