--- a/configs/train/convolutional/baseline.yaml
+++ b/configs/train/convolutional/baseline.yaml
@@ -5,11 +5,11 @@ model:
   basic_block_num: 3
   use_batch_norm: False
   activation: 'relu'
-  conv_trans_near_pruning: False
-  encoder_channels: [4, 16, 64, 64]
   compressed_channels: 8
+  encoder_scaler: 1.0
+  encoder_channels: [4, 16, 64, 64]
   decoder_channels: [64, 16, 4]
-  reconstruct_loss_type: 'BCE'
+  coord_recon_loss_type: 'BCE'
   adaptive_pruning: True
   adaptive_pruning_num_scaler: 1.0
   bpp_loss_factor: 0.2
