--- a/configs/train/convolutional/hyperprior_factorized.yaml
+++ b/configs/train/convolutional/hyperprior_factorized.yaml
@@ -6,4 +6,5 @@ model:
   hyper_compressed_channels: 8
   hyper_decoder_channels: [64]
   prior_indexes_range: [16, 16, 16, 16]
+  fea_num_filters: [1, 3, 3, 3, 1]
   quantize_indexes: True
