--- a/configs/train/convolutional/lossl_based.yaml
+++ b/configs/train/convolutional/lossl_based.yaml
@@ -2,11 +2,12 @@ include "configs/train/convolutional/baseline.yaml"
 
 model:
   compressed_channels: 32
-  prior_indexes_scaler: 10.0
+  prior_indexes_scaler: 0.0
   prior_indexes_range: [16, 16, 16, 16]
   quantize_indexes: True
   hyperprior: 'None'
   recurrent_part_enabled: True
   recurrent_part_channels: 64
   lossless_coord_indexes_range: [8, 8, 8, 8]
-  lossless_hybrid_hyper_decoder_fea: True
+  lossless_fea_num_filters: [1, 3, 3, 3, 3, 1]
+  hybrid_hyper_decoder_fea: True
