--- a/configs/train/convolutional/lossl_coord.yaml
+++ b/configs/train/convolutional/lossl_coord.yaml
@@ -1,10 +1,9 @@
 include "configs/train/convolutional/baseline.yaml"
 
 model:
-  basic_block_num: 2
-  compressed_channels: 8
-  prior_indexes_scaler: 256.0
-  prior_indexes_post_scaler: 0.00390625
+  basic_block_num: 1
+  compressed_channels: 32
+  prior_indexes_scaler: 0.0
   prior_indexes_range: [256, 256]
   encoder_channels: [4, 16, 64]
   decoder_channels: [16, 4]
@@ -12,8 +11,23 @@ model:
   recurrent_part_enabled: True
   recurrent_part_channels: 64
   lossless_coord_enabled: True
-  lossless_coord_indexes_range: [256, 256]
-  lossless_hybrid_hyper_decoder_fea: False
+  lossless_coord_indexes_range: [200, 200]
+  lossless_fea_num_filters: [1, 3, 3, 3, 1]
+  skip_encoding_fea: [0, 1]
   bpp_loss_factor: 1.0
-  warmup_steps: 80000
-  warmup_bpp_loss_factor: 0.01
+  warmup_steps: 10000
+  warmup_bpp_loss_factor: 20.0  # TODO: quantize_indexes?
+  linear_warmup: True
+
+train:
+  learning_rate: [0.001, 0.0002, 0.005]
+  cuda_empty_cache_frequency: 1000
+  dataset:
+    train_filelist_path: 'train_list_obj.txt'
+    data_format: '.obj'
+    mesh_sample_points_num: 10000000
+    mesh_sample_point_resolution: 512
+    kd_tree_partition_max_points_num: 0
+
+    random_rotation: True
+    resolution: 256
