Comment the includes

--- a/configs/train/convolutional/hyperprior_scale_normal.yaml
+++ b/configs/train/convolutional/hyperprior_scale_normal.yaml
@@ -1,4 +1,4 @@
-include "configs/train/convolutional/hyperprior_factorized.yaml"
+# include "configs/train/convolutional/hyperprior_factorized.yaml"
 
 model:
   hyperprior: ScaleNoisyNormal
