--- a/configs/train/convolutional/lossl_based.yaml
+++ b/configs/train/convolutional/lossl_based.yaml
@@ -1,4 +1,4 @@
-include "configs/train/convolutional/baseline.yaml"
+# include "configs/train/convolutional/baseline.yaml"
 
 model:
   compressed_channels: 32
