--- a/configs/train/convolutional/hyperprior_factorized.yaml
+++ b/configs/train/convolutional/hyperprior_factorized.yaml
@@ -1,4 +1,4 @@
-include "configs/train/convolutional/baseline.yaml"
+# include "configs/train/convolutional/baseline.yaml"
 
 model:
   hyperprior: NoisyDeepFactorized
