--- a/configs/train/convolutional/lossl_coord.yaml
+++ b/configs/train/convolutional/lossl_coord.yaml
@@ -1,4 +1,4 @@
-include "configs/train/convolutional/baseline.yaml"
+# include "configs/train/convolutional/baseline.yaml"
 
 model:
   basic_block_num: 1
