--- a/configs/train/convolutional/baseline.yaml
+++ b/configs/train/convolutional/baseline.yaml
@@ -21,12 +21,12 @@ train:
   more_reproducible: True
   batch_size: 8
   num_workers: 2
-  optimizer: [AdamW, AdamW, Adam]
+  optimizer: [AdamW, Adam]
   momentum: 0.9
-  weight_decay: [0.0001, 0.0001, 0.0]
-  max_grad_norm: [1.0, 1.0, 0.0]
+  weight_decay: [0.0001, 0.0]
+  max_grad_norm: [1.0, 0.0]
 
-  learning_rate: [0.0005, 0.0001, 0.005]
+  learning_rate: [0.0005, 0.005]
   epochs: 40
 
   scheduler: Step
@@ -40,6 +40,11 @@ train:
 
   dataset_path: 'lib.datasets.ShapeNetCorev2'
   dataset:
+    train_filelist_path: 'train_list_obj.txt'
+    data_format: '.obj'
+    mesh_sample_points_num: 2500000
+    mesh_sample_point_method: 'uniform'
+    mesh_sample_point_resolution: 256
     random_rotation: True
 
 
