--- a/configs/train/convolutional/gpcc_lossl_based.yaml
+++ b/configs/train/convolutional/gpcc_lossl_based.yaml
@@ -6,11 +6,11 @@ model:
   basic_block_num: 3
   use_batch_norm: False
   activation: 'relu'
-  compressed_channels: 32
+  compressed_channels: 8
   encoder_channels: [4, 16, 64, 64]
   decoder_channels: [64, 16, 4]
   prior_indexes_scaler: 0.0
-  prior_indexes_range: [16, 16, 16, 16]
+  prior_indexes_range: [512, 512]
   quantize_indexes: True
   recurrent_part_channels: 64
   lossless_fea_num_filters: [1, 3, 3, 3, 3, 1]
@@ -19,5 +19,11 @@ model:
   coord_recon_loss_type: 'BCE'
   adaptive_pruning: True
   adaptive_pruning_num_scaler: 1.0
-  warmup_steps: 1000
+  warmup_steps: 4000
   warmup_bpp_loss_factor: 0.01
+
+train:
+  optimizer: [AdamW, AdamW, AdamW, Adam]
+  weight_decay: [0.0001, 0.0001, 0.0001, 0.0]
+  max_grad_norm: [1.0, 1.0, 1.0, 0.0]
+  learning_rate: [0.0005, 0.0003, 0.0001, 0.005]
