--- a/configs/train/convolutional/lossl_based.yaml
+++ b/configs/train/convolutional/lossl_based.yaml
@@ -1,13 +1,20 @@
 # include "configs/train/convolutional/baseline.yaml"
 
 model:
-  compressed_channels: 32
+  compressed_channels: 8
   prior_indexes_scaler: 0.0
-  prior_indexes_range: [16, 16, 16, 16]
+  prior_indexes_range: [512, 512]
   quantize_indexes: True
   hyperprior: 'None'
   recurrent_part_enabled: True
   recurrent_part_channels: 64
-  lossless_coord_indexes_range: [8, 8, 8, 8]
+  lossless_coord_indexes_range: [512, 512]
   lossless_fea_num_filters: [1, 3, 3, 3, 3, 1]
   hybrid_hyper_decoder_fea: True
+  warmup_steps: 4000
+
+train:
+  optimizer: [AdamW, AdamW, AdamW, Adam]
+  weight_decay: [0.0001, 0.0001, 0.0001, 0.0]
+  max_grad_norm: [1.0, 1.0, 1.0, 0.0]
+  learning_rate: [0.0005, 0.0003, 0.0001, 0.005]
