--- a/configs/train/convolutional/baseline.yaml
+++ b/configs/train/convolutional/baseline.yaml
@@ -21,12 +21,12 @@ train:
   more_reproducible: True
   batch_size: 8
   num_workers: 2
-  optimizer: [AdamW, Adam]
+  optimizer: AdamW
   momentum: 0.9
-  weight_decay: [0.0001, 0.0]
-  max_grad_norm: [1.0, 0.0]
+  weight_decay: 0.0001
+  max_grad_norm: 1.0
 
-  learning_rate: [0.0005, 0.005]
+  learning_rate: 0.0005
   epochs: 40
 
   scheduler: Step
