--- a/configs/train/convolutional/gpcc_lossl_based.yaml
+++ b/configs/train/convolutional/gpcc_lossl_based.yaml
@@ -23,7 +23,7 @@ model:
   warmup_bpp_loss_factor: 0.01
 
 train:
-  optimizer: [AdamW, AdamW, AdamW, Adam]
-  weight_decay: [0.0001, 0.0001, 0.0001, 0.0]
-  max_grad_norm: [1.0, 1.0, 1.0, 0.0]
-  learning_rate: [0.0005, 0.0003, 0.0001, 0.005]
+  optimizer: [AdamW, AdamW, AdamW]
+  weight_decay: [0.0001, 0.0001, 0.0001]
+  max_grad_norm: [1.0, 1.0, 1.0]
+  learning_rate: [0.0005, 0.0003, 0.0001]
