--- a/configs/train/image_compression_baseline.yaml
+++ b/configs/train/image_compression_baseline.yaml
@@ -8,7 +8,7 @@ train:
   more_reproducible: True
   batch_size: 8
   num_workers: 2
-  optimizer: [Adam, SGD]
+  optimizer: Adam
   momentum: 0.9
   weight_decay: 0.0001
 
