--- a/configs/train/mlp_based.yaml
+++ b/configs/train/mlp_based.yaml
@@ -7,12 +7,12 @@ train:
   more_reproducible: True
   batch_size: 2
   num_workers: 2
-  optimizer: [AdamW, AdamW, Adam]
-  momentum: [0.9, 0.9, 0.1]
-  weight_decay: [0.0001, 0.0001, 0.0]
-  max_grad_norm: [1.0, 1.0, 0.0]
+  optimizer: [AdamW, AdamW]
+  momentum: [0.9, 0.9]
+  weight_decay: [0.0001, 0.0001]
+  max_grad_norm: [1.0, 1.0]
 
-  learning_rate: [0.0005, 0.0001, 0.005]
+  learning_rate: [0.0005, 0.0001]
   epochs: 40
 
   scheduler: Step
