--- a/configs/train/convolutional/lossy_coord_lossy_color.yaml
+++ b/configs/train/convolutional/lossy_coord_lossy_color.yaml
@@ -26,10 +26,10 @@ train:
   num_workers: 4
   optimizer: [AdamW, AdamW, AdamW]
   momentum: 0.9
-  weight_decay: [0.00001, 0.00001, 0.00001]
-  max_grad_norm: [1.0, 1.0, 1.0]
+  weight_decay: 0.00001
+  max_grad_norm: 1.0
 
-  learning_rate: [0.002, 0.0006, 0.0002, 0.005]
+  learning_rate: [0.002, 0.0006, 0.0002]
   epochs: 350
 
   scheduler: Step
