--- a/configs/train/convolutional/lossy_coord_lossy_color.yaml
+++ b/configs/train/convolutional/lossy_coord_lossy_color.yaml
@@ -1,18 +1,20 @@
 model_path: models.convolutional.lossy_coord_lossy_color
 model:
   activation: 'prelu'
-  compressed_channels: [1, 1, 1, 1, 1, 1, 1]
+  compressed_channels: [1]
   bottleneck_scaler: 2
   encoder_channels: [32, 64]
   decoder_channels: 32
   adaptive_pruning: True
-  adaptive_pruning_num_scaler: 1.01
-  geo_lossl_part_channels: [128, 128, 128, 128, 128, 128, 1]
+  adaptive_pruning_scaler_train: 1.01
+  adaptive_pruning_scaler_test: 1.01
+  geo_lossl_if_sample: [0, 1, 0, 1, 0, 1, 0, 1, 1, 1]
+  geo_lossl_channels: [128, 128, 128, 128, 128, 128, 128, 128, 256, 256, 1]
   bits_loss_factor: 1.0
-  coord_recon_loss_factor: 0.4
+  coord_recon_loss_factor: 0.5
   color_recon_loss_factor: 0.2
   warmup_steps: 5000
-  warmup_fea_loss_factor: 0.01
+  warmup_fea_loss_factor: 0.00001
   warmup_color_loss_factor: 0.00001
   linear_warmup: True
 
@@ -39,8 +41,8 @@ train:
   resume_from_ckpt: ''
   resume_items: ['state_dict']
   log_frequency: 10
-  ckpt_frequency: 35
-  test_frequency: 35
+  ckpt_frequency: 10
+  test_frequency: 10
 
   dataset_path: 'lib.datasets.PlyVoxel.8iVFBv2'
   dataset:
