--- a/configs/train/convolutional/lossy_coord_lossy_color.yaml
+++ b/configs/train/convolutional/lossy_coord_lossy_color.yaml
@@ -4,7 +4,7 @@ model:
   compressed_channels: [1]
   bottleneck_scaler: 2
   encoder_channels: [32, 64]
-  decoder_channels: 32
+  decoder_channels: [32]
   adaptive_pruning: True
   adaptive_pruning_scaler_train: 1.01
   adaptive_pruning_scaler_test: 1.00
@@ -13,8 +13,8 @@ model:
   bits_loss_factor: 1.0
   coord_recon_loss_factor: 0.4
   color_recon_loss_factor: 0.2
-  warmup_fea_loss_steps: 5000
-  warmup_color_loss_steps: 5000
+  warmup_fea_loss_steps: 10000
+  warmup_color_loss_steps: 10000
   warmup_fea_loss_factor: 0.00001
   warmup_color_loss_factor: 0.00001
   linear_warmup: True
@@ -33,10 +33,10 @@ train:
   max_grad_norm: 1.0
 
   learning_rate: [0.002, 0.0006, 0.0002]
-  epochs: 350
+  epochs: 500
 
   scheduler: Step
-  lr_step_size: 55
+  lr_step_size: 80
   lr_step_gamma: 0.3
 
   resume_from_ckpt: ''
@@ -63,9 +63,5 @@ test:
   dataset_path:
     'lib.datasets.PlyVoxel.MPEG_GPCC_CTC_Solid'
   dataset:
-    root: ['datasets/MPEG_GPCC_CTC/Solid']
-    filelist_path: ['Solid_1024.txt']
-    kd_tree_partition_max_points_num: 0
+    kd_tree_partition_max_points_num: 600000
     with_color: True
-    ori_resolution: 1024
-    resolution: 1024
