--- a/configs/mlp_based_test.yaml
+++ b/configs/mlp_based_test.yaml
@@ -26,7 +26,7 @@ train:
 
   dataset_path: 'lib.datasets.ShapeNetCorev2'
   dataset:
-    train_filelist_path: 'obj_train_list.txt'
+    train_filelist_path: 'all_list_obj.txt'
     data_format: '.obj'
     mesh_sample_points_num: 40000
     random_rotation: True
