--- a/configs/convolutional/lossy_coord_v2/baseline_r1.yaml
+++ b/configs/convolutional/lossy_coord_v2/baseline_r1.yaml
@@ -40,6 +40,7 @@ train:
   dataset_path: 'lib.datasets.ShapeNetCorev2'
   dataset:
     train_filelist_path: 'all_list_obj.txt'
+    train_divisions: 'all'
     data_format: '.obj'
     mesh_sample_points_num: 2500000
     mesh_sample_point_method: 'uniform'
