--- a/config/image_compression_test.yaml
+++ b/config/image_compression_test.yaml
@@ -2,35 +2,31 @@ model_path: models.image_compression.baseline
 
 
 train:
-  rundir_name: 'train_image_compression_<autoindex>'
-  device: '0,1'
-  amp: False
+  rundir_name: 'image_compression/<autoindex>'
   more_reproducible: True
-  batch_size: 8
-  num_workers: 2
-  optimizer: Adam
+  amp: False
+  batch_size: 16
+  num_workers: 16
+  optimizer: AdamW
   momentum: 0.9
   weight_decay: 0.0001
 
-  learning_rate: 0.0001
+  learning_rate: 0.001
   epochs: 10
+  lr_step_size: 4
+  lr_step_gamma: 0.5
 
   ckpt_frequency: 1
-  lr_step_size: 2
-  lr_step_gamma: 0.5
-  resume_from_ckpt: ''  # 'runs/train_image_compression_0/ckpts/epoch_<maxindex>.pt'
-  resume_items: ['state_dict']
   test_frequency: 1
 
   dataset_path: 'lib.datasets.ImageFolder'
   dataset:
-    root: 'datasets/coco2017/images'
-    filelist_path: 'train2017_list.txt'
-    file_path_pattern: 'test2017/*.jpg'
+    root: 'datasets/OpenImagesV4'
+    filelist_path: 'train.txt'
+    file_path_pattern: 'train/*.jpg'
 
-    normalization_scaler: 255
     channels_order: 'BGR'
-    target_shapes: [1024, 1024, 1280, 1280]
+    target_shapes: [768, 512, 512, 768]
     resize_strategy: 'Expand'
 
 
@@ -45,7 +41,5 @@ test:
     filelist_path: 'list.txt'
     file_path_pattern: '*.png'
 
-    normalization_scaler: 255
     channels_order: 'BGR'
-    target_shapes: [64, 64]
-    resize_strategy: 'Adapt'
+    resize_strategy: 'None'
