--- a/config/image_compression_test.yaml
+++ b/config/image_compression_test.yaml
@@ -5,13 +5,13 @@ train:
   rundir_name: 'image_compression/<autoindex>'
   more_reproducible: True
   amp: False
-  batch_size: 16
+  batch_size: 8
   num_workers: 16
-  optimizer: AdamW
+  optimizer: Adam
   momentum: 0.9
-  weight_decay: 0.0001
+  weight_decay: 0.0
 
-  learning_rate: 0.001
+  learning_rate: 0.0001
   epochs: 10
   lr_step_size: 4
   lr_step_gamma: 0.5
